k8s/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-credit
spec:
  selector:
    matchLabels:
      app: api-credit
  template:
    metadata:
      labels:
        app: api-credit
    spec:
      containers:
      - name: api
        image: ml-api:1.0.3
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        startupProbe:
          httpGet:
            path: /health
            port: 8000
          failureThreshold: 15
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 5
