k8s/base/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-credit
spec:
  selector:
    matchLabels:
      app: front-end-credit
  template:
    metadata:
      labels:
        app: front-end-credit
    spec:
      containers:
      - name: front
        image: ml-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
