k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-svc
spec:
  selector:
    app: api-credit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
