k8s/base/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service-service
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
