k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-credit-service
spec:
  selector:
    app: api-credit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
