k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-app-ingress
spec:
  rules:
  - host: credit-app.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ml-api-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-credit-svc
            port:
              number: 80
